# Lokmat

./: .gitignore  Dockerfile  LICENSE  README.md  add_ignores.py  alembic.ini  cloudbuild.yaml  docker-compose.yml  fix_38.py  fix_mypy.py  lokmat_rubric_audit.md  mypy.txt  mypy_new.txt  mypy_out.txt  playwright.config.js  pyproject.toml
.github/workflows/: ci.yml
api/: .env.example  __init__.py  config.py  main.py  requirements.txt
api/db/: __init__.py  session.py
api/db/migrations/: env.py
api/db/migrations/versions/: .gitkeep
api/models/: __init__.py  models.py
api/repositories/: __init__.py  session_repo.py  user_repo.py
api/routers/: __init__.py  assistant.py  auth.py  elections.py  health.py  voter.py
api/schemas/: __init__.py  schemas.py
api/services/: __init__.py  audit_service.py  cache_service.py  election_calendar.py  firebase_service.py  gemini_service.py
api/utils/: __init__.py  auth.py  logging.py  rate_limit.py  retry.py
frontend/: .env.example  .firebaserc  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/e2e/: a11y.spec.js  chat.spec.js
frontend/src/: App.jsx  firebase.js  index.css  main.jsx
frontend/src/components/: BottomNav.css  BottomNav.jsx  ErrorBoundary.jsx  Navbar.css  Navbar.jsx
frontend/src/context/: AuthContext.jsx  LanguageContext.jsx
frontend/src/i18n/: en.json  hi.json
frontend/src/pages/: AIGuide.css  AIGuide.jsx  Election.css  Election.jsx  Home.css  Home.jsx  Live.css  Live.jsx  Login.css  Login.jsx  MyVote.css  MyVote.jsx  Profile.css  Profile.jsx  SOS.css  SOS.jsx  Volunteer.css  Volunteer.jsx
frontend/src/services/: api.js
infra/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
k6/: load_test.js
tests/: __init__.py  conftest.py
tests/e2e/: accessibility.spec.js  login-flow.spec.js
tests/integration/: __init__.py  test_auth_flow.py  test_chat.py  test_chat_pipeline.py  test_chat_stream.py  test_health.py  test_security.py
tests/load/: load_test.js
tests/unit/: __init__.py  test_auth.py  test_cache_service.py  test_coverage.py  test_election_calendar.py  test_gemini_service.py  test_models.py  test_rate_limit.py  test_repositories.py  test_retry.py  test_schemas.py
