[project]
name = "lokmat"
version = "1.0.0"
description = "LokMat — AI-powered election assistant for Indian voters"
requires-python = ">=3.12"
license = "Apache-2.0"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["api", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",   # assert usage (needed in tests)
    "S104",   # hardcoded bind-all-interfaces (needed for Cloud Run)
    "B008",   # function calls in default args (FastAPI Depends)
    "ARG001", # unused function arguments (common in FastAPI)
    "RUF012", # mutable class variables without ClassVar (SQLAlchemy models)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ARG001", "ARG002"]
"api/services/gemini_service.py" = ["E501"]  # System prompts are intentionally long
"api/services/election_calendar.py" = ["E501"]
"api/utils/retry.py" = ["S311", "RET503"]  # random.uniform for jitter is safe; wrapper return is implicit
"api/routers/auth.py" = ["S106"]  # S106: token_type is not a password field

[tool.ruff.lint.isort]
known-first-party = ["api"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "jose.*",
    "sqlalchemy.*",
    "aiosqlite.*",
    "uvicorn.*",
    "starlette.*",
    "fastapi.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=api --cov-report=term-missing --cov-report=html:htmlcov --cov-fail-under=80"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
